Fix back button visibility for edit view

--- a/src/views/edit.css
+++ b/src/views/edit.css
@@ -29,6 +29,8 @@
 }
 
 .backButton {
+    background-color: var(--color-brand);
+    fill: var(--color-brand-c);
     display: flex;
     align-items: center;
     justify-content: center;
